# radfoam

./: pyproject.toml  setup.cfg  setup.py
src/: CMakeLists.txt
src/aabb_tree/: aabb_tree.cu
