[build-system]
requires = [
    "setuptools>=64",
    "pybind11",
    "glfw==2.6.5",
    "cmake_build_extension",
]
build-backend = "setuptools.build_meta"

[project]
name = "radfoam"
description = "Radiant Foam PyTorch bindings and training utilities."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dynamic = ["version", "dependencies"]

[tool.black]
line-length = 80
