[build-system]
requires = [
    "setuptools>=64",
    "pybind11",
    "glfw==2.6.5",
    "cmake_build_extension",
    "nvidia-cuda-cccl",
]
build-backend = "setuptools.build_meta"

[project]
name = "radfoam"
version = "1.0.0"
description = "Radiant Foam PyTorch bindings and training utilities."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "cmake==3.29.2",
    "cmake-format",
    "cmake_build_extension",
    "ConfigArgParse",
    "einops",
    "glfw==2.6.5",
    "opencv-python",
    "nvidia-cuda-cccl",
    "pillow",
    "plyfile",
    "pybind11[global]",
    "pycolmap",
    "pyyaml",
    "scipy",
    "tensorboard",
    "torch>=2.11.0",
    "tqdm",
]

[tool.black]
line-length = 80
