[metadata]
name = radfoam
description = C++ backend for RadFoam
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Rebain
author_email = drebain@cs.ubc.ca
license = Apache-2.0
platforms = any
url = https://radfoam.github.io
project_urls =
    Source  = https://github.com/theialab/radfoam
keywords = ray tracing radiance field
classifiers =

[options]
zip_safe = False
packages = find:
python_requires = >=3.10

[options.packages.find]
where = .
include =
    configs*
    data_loader*
    radfoam*
    radfoam_model*
